fixing shots off center issue

--- a/cmd/play-server/static/styles/main.css
+++ b/cmd/play-server/static/styles/main.css
@@ -39,7 +39,7 @@
   width: 120px;
   height: 70px;
   margin-top: 4px;
-  margin-left: 4px;
+  margin-left: 0px;
   border-width: 3px;
   border-style: solid;
 }
